# TenderIQ

./: .gitignore  BAJARILGAN_ISHLAR.md  KELGUSI_REJALAR.md  LICENSE  PROJECT_CONTEXT.md  README.md  UI_REDESIGN_PLAN.md  design-mockup.html
tender-backend/: .env.example  .gitignore  Dockerfile  Makefile  TenderIQ_Architecture.md  TenderIQ_Yol_Xaritasi.md  celerybeat-schedule  docker-compose.prod.yml  docker-compose.yml  kill.py  pyproject.toml  requirements-dev.txt  requirements.txt
tender-backend/.github/workflows/: deploy-prod.yml  deploy-staging.yml  test.yml
tender-backend/.next/: trace  trace-build
tender-backend/.next/cache/: .previewinfo  .rscinfo
tender-backend/alembic/: alembic.ini  env.py
tender-backend/alembic/versions/: 2026_06_20_232dc8ca3860_add_roles_permissions_rbac.py  2026_06_20_30a7deb628a2_add_document_checks_and_api_keys.py  2026_06_20_87a23b52939a_add_email_templates_table.py  2026_06_20_e62b8ed9ee46_add_promo_codes_table.py  2026_06_22_add_stored_path_to_document_checks.py  2026_07_11_add_uzex_auth_fields.py
tender-backend/app/: config.py  constants.py  database.py  dependencies.py  exceptions.py  main.py
tender-backend/bot/: config.py  main.py
tender-backend/docker/: Dockerfile.bot  Dockerfile.celery  nginx.conf
tender-backend/docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md
tender-backend/monitoring/: prometheus.yml
tender-backend/scripts/: backup_db.py  createsuperuser.py  historical_scrape.py  seed_data.py  seed_email_templates.py  seed_rbac.py  train_models.py
tender-backend/tests/: conftest.py  factories.py
(+400 files in other folders)
